syntax = "proto3";

option csharp_namespace = "Echo";

package echo;

service EchoService {
	rpc EchoMe (EchoRequest) returns (EchoResponse);
	rpc ReverseEcho (EchoRequest) returns (EchoResponse);
}

message EchoRequest {
	string text = 1;
}

message EchoResponse {
	string original = 1;
	string result = 2;
}

